Add new booster gym to task notes

--- a/docs/Meeting Notes/2025-10-09.md
+++ b/docs/Meeting Notes/2025-10-09.md
@@ -12,3 +12,4 @@ nav_order: 1
 - Figure out how to turn `robocup-mujoco` into something with SimRobot compabilities (i.e., realistic perception/localization, full game simulation, able to train with RL, easily deployable).
 - Reach out to 3D sim league developers to better understand how to use `robocup-mujoco` and see if they have tried the things mentioned above.
 - Evaluate the sim-to-real/sim-to-sim gap of`robocup-mujoco` (run Booster's walk policy?).
+- Look into getting [`booster_gym`](https://github.com/BoosterRobotics/booster_gym) running as a way to get policies trained in Isaac Gym running in mujoco
